Make pics displayable

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="button1"><a href="#">Email me</a></div>
         </div>
         <div class="upperpic">
-            <img src="./photo.jpg" alt="pic">
+            <img src="./photos/photo.jpg" alt="pic">
             <p>by andrea furtado</p>
         </div>
     </div>
@@ -33,11 +33,11 @@
     <h3>ENEMIES</h3>
     <div class="midpics">
             <div>
-                <img src="./money.jpg" alt="money">
+                <img src="./photos/money.jpg" alt="money">
                 <p>This one sucks</p>
             </div>
             <div>
-                <img src="./people.jpg" alt="people">
+                <img src="./photos/people.jpg" alt="people">
                 <p>I hate them</p>
             </div>
      </div>
